add folder uploads

--- a/.gitignore
+++ b/.gitignore
@@ -90,7 +90,7 @@ wp-content/*
 !wp-content/mu-plugins/
 !wp-content/plugins/
 !wp-content/themes/
-wp-content/uploads/
+!wp-content/uploads/
 !wp-content/languages/
 
 # ignore these plugins from the core
